# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.594 2009/07/28 00:29:25 mpagano Exp $

*git-sources-2.6.31_rc4-r1 (28 Jul 2009)

  28 Jul 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.31_rc4-r1.ebuild:
  Version bump

*git-sources-2.6.31_rc3-r6 (23 Jul 2009)
*git-sources-2.6.31_rc3-r5 (23 Jul 2009)
*git-sources-2.6.31_rc3-r4 (23 Jul 2009)

  23 Jul 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.31_rc3-r4.ebuild, +git-sources-2.6.31_rc3-r5.ebuild,
  +git-sources-2.6.31_rc3-r6.ebuild:
  Version bumps

*git-sources-2.6.31_rc3-r5 (21 Jul 2009)
*git-sources-2.6.31_rc3-r4 (21 Jul 2009)

  21 Jul 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.31_rc3-r4.ebuild, +git-sources-2.6.31_rc3-r5.ebuild:
  Version bumps

*git-sources-2.6.31_rc3-r3 (17 Jul 2009)

  17 Jul 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.31_rc3-r3.ebuild:
  Version bump

*git-sources-2.6.31_rc3-r2 (16 Jul 2009)

  16 Jul 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.31_rc3-r2.ebuild:
  Version bump

*git-sources-2.6.31_rc3-r1 (15 Jul 2009)

  15 Jul 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.31_rc3-r1.ebuild:
  Version bump

  14 Jul 2009; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.31_rc1-r6.ebuild, -git-sources-2.6.31_rc1-r7.ebuild,
  -git-sources-2.6.31_rc1-r8.ebuild, -git-sources-2.6.31_rc1-r9.ebuild,
  -git-sources-2.6.31_rc1-r10.ebuild, -git-sources-2.6.31_rc1-r11.ebuild:
  Old Version cleanup

*git-sources-2.6.31_rc2-r10 (14 Jul 2009)

  14 Jul 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.31_rc2-r10.ebuild:
  Version bump

*git-sources-2.6.31_rc2-r9 (13 Jul 2009)

  13 Jul 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.31_rc2-r9.ebuild:
  Version bump

*git-sources-2.6.31_rc2-r8 (12 Jul 2009)
