@@ -1,15 +1,4 @@
 DIST linux-2.6.30.tar.bz2 59435895 RMD160 72219f992c6266dfe78c6d803d0506c9db1e45b8 SHA1 5fb7f2ccdc59c57887d586971a157bee7af324d1 SHA256 d7b9f19b92fd5c693c16cd62f441d051b699f28ec6a175d1b464e58bacd8c78f
-DIST patch-2.6.31-rc2-git1.bz2 42957 RMD160 be93185bdef2e04de5b7bdeca9e5dd6893666d0a SHA1 9e486f1ffb94965936c4c07440ecf34ec7d821dc SHA256 83cd002c2cc7954614d58205508867df62585b8b73c760734b069fddfe32afb3
-DIST patch-2.6.31-rc2-git10.bz2 278340 RMD160 04a2cf1c9aafdc568d1d35e5c564aa85ff8937c7 SHA1 db5f7eb77316161120eda3f371008ad9952e8bae SHA256 17f1cef1919c2e265e34f17ae5260449fbd9f0994c56569a4a1101133fc82e1c
-DIST patch-2.6.31-rc2-git2.bz2 76517 RMD160 c0fbf9613ac193eb446095e569fb5223158de5ad SHA1 edffa1b4c8fa1c13bc558155725a9d105760db5c SHA256 53080043506019e7da682f2c8429563cbee860cb18bb428a674acf47f66a791a
-DIST patch-2.6.31-rc2-git3.bz2 120796 RMD160 da9a50417a7b417af1c28e964699968704a4272e SHA1 72ae0fc02ad58e989810b2340e47453d34044af9 SHA256 d8709fe4687367aea6570e3b02696b75ebd658c37fd573a8e47a4e2b85fb5215
-DIST patch-2.6.31-rc2-git4.bz2 121220 RMD160 02a34b97464a34fd82a10ada01f151b2ad521506 SHA1 cbe65ea1e650cbdd30e0e600588731bd8fa022d4 SHA256 ac567b4e034bd6c3445ee8bf016cc4cf1d3f387ed0ba1e51929e74d426e3f86e
-DIST patch-2.6.31-rc2-git5.bz2 144114 RMD160 c661e31b6b976526c6b872ca38ad6b9b048547b7 SHA1 de657ad810a072b0ed1827d95a4462472d53b834 SHA256 419bb598caa357b76c76e5d0b65d55e0843d9e3d17307c47aad323b54c4ff327
-DIST patch-2.6.31-rc2-git6.bz2 186493 RMD160 46496133aa86c53889f3785ebf0880f721f74953 SHA1 74b2fea28f8139dcf7a998c70e1796e5f1fa7941 SHA256 59f1d02b9c31df1e5fcd00982a90857d2b8f718b89b2cbc446beb92e70f0c4a0
-DIST patch-2.6.31-rc2-git7.bz2 231153 RMD160 78cba606edbeae731f7320fbf1bcfaf9e03b6e05 SHA1 fe96336ba2c66ec1e4b00ed1f55732eded5415df SHA256 8ec4df00938281fe3665d8128c4d6b13dd4e0d87716e6eeccdcffb0511febdc2
-DIST patch-2.6.31-rc2-git8.bz2 231413 RMD160 f93ad61b4f3f171de904305d111d84cd55397de3 SHA1 c14409b4444b4fe251b1321253d7d198108f98bc SHA256 172c3ad442eacf06f2eb7872c2ee2b5ed15fa9245d9c302a27656dfd7f22fd0b
-DIST patch-2.6.31-rc2-git9.bz2 244706 RMD160 c243d83a6f1d88749880678aae1bbc47fa0cf842 SHA1 52fd89a6f4ddb902b8b714f01d89cb82719faedf SHA256 9b1a5e326c3cff2bdc199d3120f1fe87cdfe5770ef41c880dcdddfde57cd7d83
-DIST patch-2.6.31-rc2.bz2 10004852 RMD160 dcefc75df2f0726bacfdc2b487d36552653033b7 SHA1 96fa27aee8aea52a98c8d54599b9a95ee9cf34c7 SHA256 79bb05ec1dd8d19d5c27f1be6a58de352bbcd9528c122275f6e22b4d7e529af7
 DIST patch-2.6.31-rc3-git1.bz2 11533 RMD160 192038fcc9be6eb537643b9df103fc63cb69c70a SHA1 6375ed03614fd2808ad9a1a302c2395e321cbc90 SHA256 ae734a5938b3a83cef0fb7e66c8579af42de4d50e40b48f877575de7774133f3
 DIST patch-2.6.31-rc3-git2.bz2 12649 RMD160 616ad870634297283a12b2f8d09b3201b0d02fae SHA1 296f27f3e200bd98f395735ceecd9431e466d5c5 SHA256 1f979cdb1b946c44187dc4c855f7aedc8efdd202e26f73844bfb0afed2c4c076
 DIST patch-2.6.31-rc3-git3.bz2 17304 RMD160 7c51f1b90f8a3c353c865342c7aa572b7495d325 SHA1 c0d5aa11712836cde9c9e665e074919121bd8278 SHA256 018f4eb8a89d53595ec4cc0b07aaa76237e21d891be375b6098905e386b1f995
@@ -19,16 +8,6 @@ DIST patch-2.6.31-rc3-git6.bz2 94728 RMD160 4fa1900091d730569788c758036491e793b6
 DIST patch-2.6.31-rc3.bz2 10093843 RMD160 08a862570a3d7a3e148e6139ca5137c779dbf859 SHA1 fe370a943da30b8e7b0584120e350be0faec0a0d SHA256 e974f9d8647adb920c76ce7613e1f2c1cb5ba7ad751b003900f45dc483b9a918
 DIST patch-2.6.31-rc4-git1.bz2 67821 RMD160 ef2ea2bd2628184a2a149d2d8a7d81255288a4bc SHA1 601d8bf2040b1191b4daafc03f193476bb907dd3 SHA256 4b305111dabf0a742a4c926814cfe9b20ba7d15a81bf39ac59d58ccfd14ee36d
 DIST patch-2.6.31-rc4.bz2 10196452 RMD160 5f669ebf48addc42ca5f83868726d7d7028e7458 SHA1 d49146d6782d5fecec41d743c4094c1b308e0a2e SHA256 5a98b7c51fc58bdca96fd1ea2b6e3b901071aeb099aea890229232e01e82d2e3
-EBUILD git-sources-2.6.31_rc2-r1.ebuild 1246 RMD160 8c1287cb27965e51eda7b407bf4115e66b85ee8e SHA1 8f0f7c64bdb900964884a316d5ec92d832f2509c SHA256 2b972241f7a2390963a31114711d38c16c97d832b339fb7f912ffa706cd961d0
-EBUILD git-sources-2.6.31_rc2-r10.ebuild 1247 RMD160 50e43bbf6864d3d88cbc80749232fba06e8c3a66 SHA1 7556b267e142e75d77cd13257b544a53f0360438 SHA256 ad1301cc7f5ac738f5955e0d2d80fb3a758554d4d1b93456fac62bc7d40567e0
-EBUILD git-sources-2.6.31_rc2-r2.ebuild 1246 RMD160 9eab31605c9053d996838d40722db178d304bf99 SHA1 012d33dd07dcb2778c3ffd93543e900f9e097685 SHA256 0a87436793794629ded82335323de6de7fc111609e10a942504115689d997fba
-EBUILD git-sources-2.6.31_rc2-r3.ebuild 1246 RMD160 57dfc3936cf7cd2160f150a8ff53f9d862f1dbf6 SHA1 d647a7bd6d75919bdb540f1a6f69e2ab55cfa509 SHA256 5ec1eded7f75657b056e0425ad3d0276c953e7522541a75c56b211c61983e146
-EBUILD git-sources-2.6.31_rc2-r4.ebuild 1246 RMD160 cbe16cb4364c13f6b862925416d1b6e0559e6852 SHA1 2f780d6c7f25e0e0c8628c1f90a699308254e594 SHA256 dbc8a01a51ab559d361dfe449a2d06dd4ff879f12ec2398693cf3dce3da92e74
-EBUILD git-sources-2.6.31_rc2-r5.ebuild 1246 RMD160 68194254ea65837ab0d96f2f19d91d200d37b115 SHA1 fb6d048e86434f80e9cc37f893dc8f2592728dcd SHA256 163cedbd4fcaf6697fc19942c5787842f0ce92c5c43bfeb79fd9b1d7d12d463b
-EBUILD git-sources-2.6.31_rc2-r6.ebuild 1246 RMD160 7812d73d54965839d7b17dff49aa2173531ce947 SHA1 04185327bb4a7873898cfb5a536541d4021d1431 SHA256 f6af7e5af5c3632c6e524bb23738f6956719c3d51b6c774c2d349be4a833f270
-EBUILD git-sources-2.6.31_rc2-r7.ebuild 1246 RMD160 ae92b6ea1ba5e90f03030e33a7e399124e7ac6a0 SHA1 094571d58e4115cafc9dde42b55cf48f883e0758 SHA256 ff7d6ecb9b1e55b3bf2c12d260bdfbe35c479517c2bd86548dcea4bdb16448db
-EBUILD git-sources-2.6.31_rc2-r8.ebuild 1246 RMD160 92f783bf5e897b28bedd4e52cac1649119bc5763 SHA1 c07ff3939a5c28136533b620473eb42a5940d4ce SHA256 b14bd4a85c021f21b8054e304cbebb0bbf8100a5d0ded297c9c256aaad8ca14c
-EBUILD git-sources-2.6.31_rc2-r9.ebuild 1246 RMD160 020468c532287a878a655118d8a13d583333fd53 SHA1 511f592108a35e9b156a390f983b06c3ae42f43d SHA256 4fe1e29aa646e2e7852c4c6571da57e168b8cbeb4d4c0c2d4e5bc5d82491e3b2
 EBUILD git-sources-2.6.31_rc3-r1.ebuild 1246 RMD160 50a5b05e364fd78b08240389c7636aa699049283 SHA1 503e9f664ebbec2a1cd1929cde362fd3f6d3fa41 SHA256 7d293fb0502797ab18936dc6a002a204adef2cfe5c4fb246f52051cb892a44ec
 EBUILD git-sources-2.6.31_rc3-r2.ebuild 1246 RMD160 4a21ad9701c61939e9de1c2b0188c31cd5c2fafe SHA1 9a79de7080184227d9e3d07215169cc67a53d314 SHA256 fbf5b12935cf38a2d03cc7b45b8648b21cdce2d1df39c1bf5226b2bfa96b194f
 EBUILD git-sources-2.6.31_rc3-r3.ebuild 1246 RMD160 77501ebbebe57ad8fbc142ffc6a62ecbc7bb1e41 SHA1 5554b9a15c410bad1ec41c3c912b9162cc9557e5 SHA256 22d583f676142a15e5f107321c919db4b9df645f979e8b27549973599a5362c3
@@ -36,5 +15,5 @@ EBUILD git-sources-2.6.31_rc3-r4.ebuild 1246 RMD160 513a6e93806accda650f06fd2637
 EBUILD git-sources-2.6.31_rc3-r5.ebuild 1246 RMD160 ff4b28d87100c989189be1961254c16bdbd4f9d9 SHA1 e8275e0899ed00a132a9808b08d9fe57e77c1e47 SHA256 1ce6b0b792df204cd6c6ea024d48e73ddb4e448d2fce20670232ec3b73c8a602
 EBUILD git-sources-2.6.31_rc3-r6.ebuild 1246 RMD160 61c5a36d38a3372ef0c111821db80e0ac010d814 SHA1 ffe19f6f2e10f4c981903cd6bfcb98dea39fb515 SHA256 119efbc7977696ef6ed3d3e71c6deb00e197fe5d6a76e35fb122c79eb2d8704a
 EBUILD git-sources-2.6.31_rc4-r1.ebuild 1246 RMD160 9861b235973ba5b3102d45289a0fefab5380bf51 SHA1 08410c05b686717d1dff60d3f7b65f07321ac978 SHA256 4a9a29f5c4ab2ab15f818a490da7529db59f2dd9e3c7720923fa9485f89b84f2
-MISC ChangeLog 113997 RMD160 71da103ba7e0e8896e2896030b87d31c7c70c9a1 SHA1 6642a47b82b7b5b1ef892786a4eb26f040207a04 SHA256 3b4dc832f9011cd01402e0bfd0648f72acae2786552ab2b1f585f15f93af90c8
+MISC ChangeLog 114429 RMD160 560123f68d1dda8be1b57fb0877c74b1d57e08ac SHA1 1fd46e2e572c4e98bfeac82c7baf3a44c864ece6 SHA256 2cf81090440b9df7d4a58b595fde11a133911aef2cddce853f8c81986cfba81b
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
