@@ -1,6 +1,14 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.594 2009/07/28 00:29:25 mpagano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.595 2009/07/28 12:36:36 mpagano Exp $
+
+  28 Jul 2009; Mike Pagano <mpagano@gentoo.org>
+  -git-sources-2.6.31_rc2-r1.ebuild, -git-sources-2.6.31_rc2-r2.ebuild,
+  -git-sources-2.6.31_rc2-r3.ebuild, -git-sources-2.6.31_rc2-r4.ebuild,
+  -git-sources-2.6.31_rc2-r5.ebuild, -git-sources-2.6.31_rc2-r6.ebuild,
+  -git-sources-2.6.31_rc2-r7.ebuild, -git-sources-2.6.31_rc2-r8.ebuild,
+  -git-sources-2.6.31_rc2-r9.ebuild, -git-sources-2.6.31_rc2-r10.ebuild:
+  Old version cleanup
 
 *git-sources-2.6.31_rc4-r1 (28 Jul 2009)
 
